--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">CRUD ROOM Pahrul</string>
-    <string name="title_activity_detail">Data</string>
+    <string name="app_name">CRUD ROOM by Pahrul</string>
+    <string name="title_activity_detail">Data dimasukkan</string>
 </resources>
